[tool.poetry]
name = "l1pylogin"
version = "0.1.0"
description = ""
authors = ["Luke Chang <lukeme1107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyinstaller = "^6.0.0"
PyQt5 = "^5.15.9"
pywin32 = "306"
elevate = "^0.1.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
